--- a/templates/main/index.html
+++ b/templates/main/index.html
@@ -63,7 +63,7 @@
         </ul>
       {% endif %}
       <ul class="nav navbar-nav navbar-right">
-        <li id="logoutDropdown" class="dropdown {% if loggedIn is False %}hidden{% endif %}" >
+        <li id="logoutDropdown" class="dropdown {% if loggedIn == False %}hidden{% endif %}" >
           <a href="#" class="dropdown-toggle" data-toggle="dropdown"><b> {{user.first_name}} </b> <span class="caret"></span></a>
           <ul class="login-dp dropdown-menu">
             <li>
